<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/tools"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="test.app.home.searchdialog.SearchViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="16dp"
            android:paddingHorizontal="16dp"
            android:paddingVertical="16dp"
            app:cardBackgroundColor="@color/white"
            app:layout_constraintTop_toTopOf="parent"

            app:shapeAppearanceOverlay="@style/ShapeAppearance.FullRounded">

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:orientation="vertical">

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/search_for_something"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title"
                        android:textColor="@color/mainColor"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="8dp"
                        android:gravity="center"
                        android:text="@string/on_of_the_required_must_have_data"
                        android:textColor="@color/red"
                        android:visibility="@{viewModel.showError?View.VISIBLE:View.GONE}" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="16dp"
                        android:layout_marginTop="24dp"
                        android:layout_marginBottom="8dp"
                        android:paddingHorizontal="4dp"
                        app:boxCornerRadiusBottomEnd="6dp"
                        app:boxCornerRadiusBottomStart="6dp"
                        app:boxCornerRadiusTopEnd="6dp"
                        app:boxCornerRadiusTopStart="6dp"
                        app:boxStrokeColor="@color/hintColor"
                        app:boxStrokeWidth="1dp"
                        app:hintEnabled="false">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:error="@{viewModel.error}"
                            android:id="@+id/query"
                            android:hint="@string/search_for_something"
                            android:textColorHint="@color/hintColor"
                            bind:addTextListener="@{viewModel.onQueryObservable}" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="16dp"
                        android:layout_marginVertical="8dp"
                        android:paddingHorizontal="4dp"
                        app:boxCornerRadiusBottomEnd="6dp"
                        app:boxCornerRadiusBottomStart="6dp"

                        app:boxCornerRadiusTopEnd="6dp"
                        app:boxCornerRadiusTopStart="6dp"
                        app:boxStrokeColor="@color/hintColor"
                        app:boxStrokeWidth=".1dp"
                        app:hintEnabled="false">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:error="@{viewModel.error}"
                            android:hint="@string/title"
                            android:id="@+id/title"

                            android:textColorHint="@color/hintColor"
                            bind:addTextListener="@{viewModel.onTitleObservable}" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="16dp"
                        android:layout_marginVertical="8dp"
                        android:paddingHorizontal="4dp"
                        app:boxCornerRadiusBottomEnd="6dp"
                        app:boxCornerRadiusBottomStart="6dp"
                        app:boxCornerRadiusTopEnd="6dp"
                        app:boxCornerRadiusTopStart="6dp"
                        app:boxStrokeColor="@color/hintColor"
                        app:boxStrokeWidth=".1dp"
                        app:hintEnabled="false">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:error="@{viewModel.error}"
                            android:id="@+id/description"

                            android:hint="@string/description"
                            android:textColorHint="@color/hintColor"
                            bind:addTextListener="@{viewModel.onDescriptionObservable}" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="16dp"
                        android:layout_marginVertical="8dp"

                        android:paddingHorizontal="4dp"
                        app:boxCornerRadiusBottomEnd="6dp"
                        app:boxCornerRadiusBottomStart="6dp"
                        app:boxCornerRadiusTopEnd="6dp"
                        app:boxCornerRadiusTopStart="6dp"
                        app:boxStrokeColor="@color/hintColor"
                        app:boxStrokeWidth=".1dp"
                        app:hintEnabled="false">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:error="@{viewModel.error}"
                            android:hint="@string/content"
                            android:id="@+id/content"
                            android:textColorHint="@color/hintColor"
                            bind:addTextListener="@{viewModel.onContentObservable}" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/from"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginVertical="8dp"
                            android:layout_marginStart="16dp"
                            android:layout_marginEnd="6dp"
                            android:layout_weight="1"
                            android:paddingHorizontal="4dp"
                            app:boxCornerRadiusBottomEnd="6dp"
                            app:boxCornerRadiusBottomStart="6dp"
                            app:boxCornerRadiusTopEnd="6dp"
                            app:boxCornerRadiusTopStart="6dp"
                            app:boxStrokeColor="@color/hintColor"
                            app:boxStrokeWidth=".1dp"
                            app:endIconCheckable="true"
                            app:endIconDrawable="@drawable/baseline_calendar_month_24"
                            app:endIconMode="custom"
                            app:hintEnabled="false">

                            <com.google.android.material.textfield.TextInputEditText
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:hint="@string/from"
                                android:inputType="none"
                                android:enabled="false"
                                android:textColorHint="@color/hintColor"
                                bind:addTextListener="@{viewModel.onFromObservable}" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/to"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginVertical="8dp"
                            android:layout_marginStart="6dp"
                            android:layout_marginEnd="16dp"
                            android:layout_weight="1"
                            android:paddingHorizontal="4dp"
                            app:boxCornerRadiusBottomEnd="6dp"
                            app:boxCornerRadiusBottomStart="6dp"
                            app:boxCornerRadiusTopEnd="6dp"
                            app:boxCornerRadiusTopStart="6dp"
                            app:boxStrokeColor="@color/hintColor"
                            app:boxStrokeWidth=".1dp"
                            app:endIconCheckable="true"
                            app:endIconDrawable="@drawable/baseline_calendar_month_24"
                            app:endIconMode="custom"
                            app:hintEnabled="false">

                            <com.google.android.material.textfield.TextInputEditText
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:hint="@string/to"
                                android:enabled="false"
                                android:inputType="none"
                                android:textColorHint="@color/hintColor"
                                bind:addTextListener="@{viewModel.onToObservable}" />
                        </com.google.android.material.textfield.TextInputLayout>

                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="16dp"
                        android:layout_marginVertical="8dp"
                        android:orientation="vertical">


                        <com.google.android.material.textview.MaterialTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/language"
                            android:textColor="@color/mainColor" />

                        <RadioGroup
                            android:id="@+id/lang"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginVertical="8dp"
                            android:orientation="horizontal" />
                    </LinearLayout>

                    <LinearLayout

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="16dp"
                        android:layout_marginVertical="8dp"
                        android:orientation="vertical">

                        <com.google.android.material.textview.MaterialTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/sortBy"
                            android:textColor="@color/mainColor" />

                        <RadioGroup
                            android:id="@+id/sortBy"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginVertical="8dp"
                            android:orientation="horizontal" />
                    </LinearLayout>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/submit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="32dp"
                        android:layout_marginVertical="12dp"
                        android:backgroundTint="@color/mainColor"
                        android:onClick="@{()->viewModel.submit()}"
                        android:text="@string/submit"
                        android:textColor="@color/white"
                        app:cornerRadius="12dp"
                        app:rippleColor="@color/white" />
                </androidx.appcompat.widget.LinearLayoutCompat>
            </androidx.core.widget.NestedScrollView>
        </com.google.android.material.card.MaterialCardView>
    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>
